2004-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (process_section_groups): Free symtab after use.

2004-10-18  Tommy Pettersson <ptp@lysator.liu.se>
	    Nick Clifton  <nickc@redhat.com>

	* strings.c (usage): Place radix values for -t option into the
	correct order.

	* objcopy.c (add_redefine_syms_file): Change error messages to use
	<filename>:<linenumber>: format for easier parsing by automatic
	tools.

	* srconv.c (show_usage): Fix spelling typo.

	* windres.c (format_from_filename): Suggest the use of -J instead
	of -I if the file type cannot be determined.

2004-10-18  Aaron W. LaFramboise  <aaron98wiridge9@aaronwl.com>

	* strings.c: Include <sys/stat.h>.

2004-10-18  Alan Modra  <amodra@bigpond.net.au>

	* budemang.c (demangle): Fix thinko.

	* budemang.c (demangle): Handle "@plt" suffix.

2004-10-14  Nick Clifton  <nickc@redhat.com>

	* nm.c (usage): Fix description of --special-syms switch.

2004-10-13  Jakub Jelinek  <jakub@redhat.com>

	* strings.c (statbuf): New typedef.
	(file_stat): Define.
	(strings_object_file): Avoid using get_file_size, instead do the
	checks here, using file_stat.
	* configure.in (HAVE_STAT64): New test.
	* configure: Rebuilt.
	* config.in: Rebuilt.

2004-10-12  Paul Brook  <paul@codesourcery.com>

	* readelf.c (decode_ARM_machine_flags): Support EABI version 4.

2004-10-11  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (dump_symbols): Fix thinko last change.  Improve error
	messages.

2004-10-08  Nick Clifton  <nickc@redhat.com>

	* nm.c: Add a new switch --special-syms which, if enabled, will
	include the ARM Mapping symbols in nm's output.
	(usage): Mention the switch.
	(filter_symbols): Handle the switch.
	* objdump.c: Add a similar switch.
	(usage): Mention the switch.
	(dump_symbols): Handle the switch.
	* doc/binutils.texi: Document the new switches.
	* NEWS: Mention the new switches.

2004-10-08  Daniel Jacobowitz  <dan@debian.org>

	* readelf.c (get_x86_64_section_type_name): New function.