@@ -71,19 +71,28 @@ if ![info exists DLLTOOL] then {
 
 if ![file isdirectory tmpdir] {catch "exec mkdir tmpdir" status}
 
-# Make a symlink from tmpdir/gas/as and tmpdir/gas/ld to the assembler
+# Make a copy from tmpdir/gas/as and tmpdir/gas/ld to the assembler
 # and linker in the build tree, so that we can use a -B option to gcc
 # to force it to use the newly built assembler/linker.
 if {![file isdirectory tmpdir/gas]} then {
     catch "exec mkdir tmpdir/gas" status
-    if {[file isfile ../gas/as-new]} then {
-	catch "exec ln -s ../../../gas/as-new tmpdir/gas/as" status
+    send_user "file isfile ../gas/as-new[exe_ext]: [file isfile ../gas/as-new[exe_ext]]\n"
+    if {[file isfile ../gas/as-new[exe_ext]]} then {
+	catch "exec cp ../gas/as-new[exe_ext] tmpdir/gas/as[exe_ext]" status
+    } else {
+	# For non-Windows hosts there may be an executable
+	# without a .exe suffix, so try copying that instead.
+	catch "exec cp ../gas/as-new tmpdir/gas/as[exe_ext]" status
     }
-    if {[file isfile ../ld/ld-new]} then {
-	catch "exec ln -s ../../../ld/ld-new tmpdir/gas/ld" status
+    # This may not be needed any more...
+    if {[file isfile ../ld/ld-new[exe_ext]]} then {
+	catch "exec cp ../ld/ld-new[exe_ext] tmpdir/gas/ld[exe_ext]" status
+    } else {
+	catch "exec cp ../ld/ld-new tmpdir/gas/ld[exe_ext]" status
     }
 }
 set gcc_gas_flag "-B[pwd]/tmpdir/gas/"
+set dlltool_gas_flag "-S [pwd]/tmpdir/gas/as[exe_ext]"
 
 #
 # binutils_run
